# snova

./: PKG-INFO  README.md  pyproject.toml
bench/: __init__.py  __init__.pyr  app.py  bench.py  cli.py
bench/commands/: __init__.py  git.py  install.py  make.py  setup.py  update.py  utils.py
bench/config/: common_site_config.py  production_setup.py  supervisor.py  systemd.py
bench/config/templates/: Procfile  bench_manager_nginx.conf  nginx.conf  sparrow_sudoers  supervisor.conf
bench/config/templates/systemd/: sparrow-bench-node-socketio.service  sparrow-bench-sparrow-default-worker.service  sparrow-bench-sparrow-long-worker.service  sparrow-bench-sparrow-schedule.service  sparrow-bench-sparrow-short-worker.service  sparrow-bench-sparrow-web.service  sparrow-bench-web.target
bench/patches/v5/: fix_backup_cronjob.py  fix_user_permissions.py  update_archived_sites.py
bench/playbooks/: create_user.yml  macosx.yml  site.yml
bench/playbooks/roles/bench/tasks/: main.yml  setup_bench_production.yml
bench/playbooks/roles/common/tasks/: macos.yml
bench/playbooks/roles/sparrow_selinux/files/: sparrow_selinux.te
bench/playbooks/roles/sparrow_selinux/tasks/: main.yml
bench/tests/: test_base.py  test_init.py  test_setup_production.py  test_utils.py
bench/utils/: __init__.py  app.py  bench.py  system.py  translation.py
snova/: __init__.py  __init__.pyr  app.py  cli.py  exceptions.py  snova.py
snova/commands/: __init__.py  config.py  git.py  install.py  make.py  setup.py  update.py  utils.py
snova/config/: __init__.py  common_site_config.py  lets_encrypt.py  nginx.py  procfile.py  production_setup.py  redis.py  site_config.py  supervisor.py  systemd.py
snova/config/templates/: Procfile  nginx.conf  snova_manager_nginx.conf  sparrow_sudoers  supervisor.conf
snova/config/templates/systemd/: sparrow-snova-node-socketio.service  sparrow-snova-redis-cache.service  sparrow-snova-redis-queue.service  sparrow-snova-redis.target  sparrow-snova-sparrow-default-worker.service  sparrow-snova-sparrow-long-worker.service  sparrow-snova-sparrow-schedule.service  sparrow-snova-sparrow-short-worker.service  sparrow-snova-sparrow-web.service  sparrow-snova-web.target  sparrow-snova.target
snova/patches/: __init__.py  patches.txt
snova/patches/v5/: fix_backup_cronjob.py  fix_user_permissions.py  set_live_reload_config.py  update_archived_sites.py
snova/playbooks/: README.md  create_user.yml  macosx.yml  site.yml
snova/playbooks/roles/bench/tasks/: main.yml  setup_shopper.yml  setup_snova_production.yml
snova/playbooks/roles/common/tasks/: macos.yml
snova/playbooks/roles/frappe_selinux/files/: sparrow_selinux.te
snova/playbooks/roles/frappe_selinux/tasks/: main.yml
snova/playbooks/roles/mariadb/tasks/: main.yml
snova/tests/: test_base.py  test_init.py  test_setup_production.py  test_utils.py
snova/utils/: __init__.py  app.py  cli.py  render.py  snova.py  system.py  translation.py
